labs/timeout/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
spec:
  selector:
    app: backend-buggy
  ports:
    - port: 80
      targetPort: 5678
